[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["Ali Rahhal <arahal81@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.4.3"
jupyterlab = "^3.1.6"
pandas = "^1.3.2"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
